# GRC_Dash

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.py
ConanProfiles/: Linux-gcc-12-Debug.ini  Linux-gcc-12-Release.ini  Windows-gcc-12-Debug.ini  Windows-gcc-12-Release.ini
src/: CMakeLists.txt  DumpCanBus.cpp  main.cpp  main.qml
src/BusDump/: BusDump.cpp  Dump.cpp  Dump.hpp
src/CANLib/: CMakeLists.txt  defs.hpp
src/CANLib/Interface/: Interface.cpp  Interface.hpp
src/CANLib/Tools/: tools.cpp
src/CanBusDump/: CanBusDump.cpp  CanBusDump.hpp
src/Dash/: CMakeLists.txt  main.cpp
src/DataRetriever/: DataRetriever.cpp  DataRetriever.hpp
src/GRC2019/: grc2019.hpp
src/Interfaces/: CanBusDump.cpp  CanBusDump.hpp  MotorController.cpp  MotorController.hpp
src/Receiver/: Receiver.cpp  Receiver.hpp
src/RuntimeQml/: RuntimeQml.cpp  RuntimeQml.hpp
